--- a/testcharts/values.yaml
+++ b/testcharts/values.yaml
@@ -5,7 +5,7 @@
 replicaCount: 2
 
 image:
-  repository: atri/test
+  repository: ashivam/myassignment
   pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
   tag: "latest"
